# kortex

./: .gitignore  AGENTS.md  LICENSE  README.md  compose.yaml  postBuild.bash  pyproject.toml  requirements.txt  test_typedb.py  test_typedb_v3.py  typedb-config.yml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer_/: devcontainer.json
.github/: copilot-instructions.md
.project/: spec.yaml
.project_/: spec.yaml.disabled
agent/: __init__.py  graph.py  memory.py  state.py
docs/: backlog.md  spec.md
gateway/: config.json  gateway.py
kortex/: __init__.py  contracts.py
memory/: __init__.py  chat_ingest.py  examples.tql  ingest.py  retrieval.py  schema.tql  service.py  writeback.py
scripts/: launch_models.sh
tests/: test_agent.py  test_agent_memory.py  test_chat_ingest.py  test_gateway.py  test_ingest.py  test_memory_service.py  test_retrieval.py  test_typedb_smoke.py  test_typedb_v3_smoke.py  test_writeback.py
tests/fixtures/: chat_writeback_event.json
